--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="card-body">
             <h5 class="card-title">Fortune Colud Technologies</h5>
             <p class="card-text">I recently joined Fortune Cloud to study a Java (FullStack) course. </p>
-            <a href="#" class="btn btn-primary text-black"><i class="fa-solid fa-download"></i> Certificate</a>
+            <a href="#" class="btn btn-primary text-black" id="learningButton"><i class="fa-solid fa-download"></i> Certificate</a>
           </div>
         </div>
       </div>
@@ -192,6 +192,7 @@
   <a href="#home"><i class="fa-solid fa-arrow-up"></i> Back to Top</a>
 </div>
 </footer>
+<script src="./script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
